# tencent-doc-review-skill

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  report.md  requirements-dev.txt  requirements.txt  run_tests.bat  setup.cfg  tencent-docs-mcp-claude-code-macos.md  项目方案.md
debug-output/: tdr-debug-20260330-224542-Skill Demo-deepseek.json  tdr-debug-20260402-091427-Skill Demo-deepseek.json  tdr-debug-20260402-091539-Skill Demo-deepseek.json  tdr-debug-20260402-105541-妙多AI产品调研报告-Michael-deepseek.json  tdr-debug-20260407-102855-Skill Demo-deepseek.json
docs/: PRD-v2.md  PRD-v3.md  Phase1-MVP定义与收口-执行情况.md  Phase2-主链路打通-执行情况.md  Phase3-LLM抽象层稳定化-执行情况.md  Phase4-审核结果模型统一-执行情况.md  Phase5-测试与稳定性-执行情况.md  Phase6-腾讯文档读取接入-执行情况.md  Phase7-结果写回策略-执行情况.md  Phase8-发布与交付-执行情况.md  Release-Guide.md
docs/执行情况-v3/: PhaseA-路径纠偏.md  PhaseB-MCP文档下载链路.md  PhaseC-Word解析与批注.md  PhaseD-上传到腾讯文档指定位置.md  PhaseE-Skill化与跨平台整理.md  真实MCP能力验证记录-下载优先更新.md  真实MCP能力验证记录.md  真实联调结果.md
phase1-infrastructure/: 执行记录.md
skills/tencent_doc_review_native/: SKILL.md
src/: requirements.txt
src/tencent_doc_review/: __init__.py  cli.py  config.py  deepseek_client.py  mcp_client.py  tencent_doc_client.py
src/tencent_doc_review/access/: __init__.py  agent_mcp_client.py  claude_code_bridge.py  download_manager.py  mcp_adapter.py  openclaw_bridge.py  upload_manager.py
src/tencent_doc_review/analyzer/: __init__.py  consistency_reviewer.py  document_analyzer.py  fact_checker.py  language_reviewer.py  quality_evaluator.py  structure_matcher.py
src/tencent_doc_review/document/: __init__.py  docx_compressor.py  word_annotator.py  word_parser.py
src/tencent_doc_review/domain/: __init__.py  review_aggregator.py  review_models.py
src/tencent_doc_review/llm/: __init__.py  base.py  factory.py  structured_output.py
src/tencent_doc_review/llm/providers/: deepseek.py  minimax.py  mock.py  openai.py
src/tencent_doc_review/skill/: __init__.py  skill_protocol.py
src/tencent_doc_review/templates/: __init__.py  default_product_research_review_rules.md  default_product_research_review_template.md  default_product_research_structure_template.md
src/tencent_doc_review/workflows/: __init__.py  skill_pipeline.py
src/tencent_doc_review/writers/: __init__.py  annotation_adapter.py  doc_append_writer.py  report_generator.py
templates/: default_product_research_review_rules.md
tests/: README.md  __init__.py  conftest.py
tests/.tmp/real-provider-check/: input.md  report.md  template.md
tests/fixtures/: mock_mcp_bridge.py
tests/integration/: test_document_analyzer.py
tests/performance/: test_performance.py
tests/unit/: test_claude_code_bridge.py  test_default_review_template.py  test_fact_check_mode_routing.py  test_fact_checker.py  test_fact_checker_fallback.py  test_fact_checker_search_mode.py  test_fact_checker_source_selection.py  test_language_reviewer.py  test_minimax_quality_mode.py  test_minimax_structured_output.py  test_openai_native_web_search.py  test_openclaw_auto_bridge_config.py  test_phase2_cli_flow.py  test_phase3_llm_interface.py  test_phase4_review_models.py  test_phase6_tencent_doc_input.py  test_phase7_writeback_strategy.py  test_phase8_release_delivery.py  test_phase9_tencent_doc_file_listing.py  test_phaseB_mcp_download_flow.py  test_phaseC_word_annotation_flow.py  test_phaseD_upload_manager.py  test_phaseE_skill_workflow.py  test_phaseF_command_bridge_adapter.py  test_phaseG_openclaw_bridge_parser.py  test_phaseH_docx_compressor.py  test_phaseI_skill_upload_compression.py  test_quality_evaluator.py  test_review_local_docx.py  test_search_client.py  test_structure_matcher.py  test_structure_matcher_aliases.py
