[metadata]
name = tencent-doc-review
version = attr: tencent_doc_review.__version__
author = Dev Claw
author_email = dev@example.com
description = 基于LLM的智能文章审核批注工具 - 腾讯文档集成版
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/tencent-doc-review
project_urls =
    Bug Tracker = https://github.com/yourusername/tencent-doc-review/issues
    Documentation = https://github.com/yourusername/tencent-doc-review#readme
    Source Code = https://github.com/yourusername/tencent-doc-review
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic
keywords = llm, document-review, tencent-docs, fact-checking, quality-assessment, ai, deepseek, mcp
license = MIT
license_files = LICENSE

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    httpx>=0.25.0
    pydantic>=2.0.0
    pydantic-settings>=2.0.0
    loguru>=0.7.0
    pyyaml>=6.0
    click>=8.0.0
    rich>=13.0.0
    tqdm>=4.65.0
    aiofiles>=23.0.0

[options.packages.find]
where = src
exclude =
    tests
    tests.*
    docs
    docs.*
    examples
    examples.*

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    black>=23.7.0
    isort>=5.12.0
    mypy>=1.5.0
    flake8>=6.1.0
    pre-commit>=3.3.0
docs =
    mkdocs>=1.5.0
    mkdocs-material>=9.2.0
    mkdocstrings[python]>=0.22.0

[options.entry_points]
console_scripts =
    tencent-doc-review = tencent_doc_review.cli:main
    tdr = tencent_doc_review.cli:main

[options.package_data]
tencent_doc_review =
    py.typed
    *.yaml
    *.json

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[flake8]
max-line-length = 100
exclude =
    .git,
    .venv,
    venv,
    __pycache__,
    build,
    dist,
    .tox,
    .eggs,
    *.egg-info
ignore = E203, E266, E501, W503
max-complexity = 15
select = B,C,E,F,W,T4,B9

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = tencent_doc_review

[mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[mypy-tests.*]
disallow_untyped_defs = false

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    performance: marks tests as performance tests
